fix flicker issues

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -529,7 +529,7 @@ button:focus {
 .cookie-disclaimer {
   background: #000;
   color: #fff;
-  opacity: 0.9;
+  opacity: 1;
   width: 100%;
   bottom: 0;
   left: 0;
